eks-cluster-creation/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: sample-deployment
  name: sample-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-deployment
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: sample-deployment
    spec:
      containers:
      tolerations:
      - effect: NoSchedule
        key: spot
        operator: Equal
        value: "true"
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - preference:
              matchExpressions:
              - key: eks.amazonaws.com/capacityType
                operator: In
                values:
                - SPOT
            weight: 1
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - meta-search-engine
              topologyKey: kubernetes.io/hostname
            weight: 100
      - image: nginx:1.17.6-alpine
        name: nginx
        resources: {}
status: {}
