eks-cluster-creation/sample-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"alert-engine-develop"},"name":"alert-engine","namespace":"default"},"spec":{"ports":[{"name":"http","port":9055,"protocol":"TCP","targetPort":9055}],"selector":{"app":"alert-engine"},"type":"ClusterIP"}}
  creationTimestamp: "2023-01-11T11:04:40Z"
  labels:
    app.kubernetes.io/instance: alert-engine-develop
  name: alert-engine
  namespace: default
  resourceVersion: "10847153"
  uid: e1765b06-6f13-42fc-be4e-59f95adfabc6
spec:
  clusterIP: 10.100.88.226
  clusterIPs:
  - 10.100.88.226
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9055
    protocol: TCP
    targetPort: 9055
  selector:
    app: alert-engine
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
