eks-cluster-creation/outpath-com.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  labels:
    app: outpath-com
    name: outpath-com
  name: outpath-com
  namespace: default
spec:
  selector:
    istio: ingressgateway-com   # sample query
  servers:
  - hosts:
    - '*'
    port:
      name: http
      number: 80
      protocol: HTTP
